--- a/www/values.yaml
+++ b/www/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: stable
+  repository: 172.42.42.2:5000/www
+  tag: latest
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
